Made top content align correctly

--- a/src/client/rooms/PrivateRoom.less
+++ b/src/client/rooms/PrivateRoom.less
@@ -1,21 +1,25 @@
 .info-header {
     margin-top: 2%;
     margin-bottom: 2%;
+    align-items: center;
+    justify-content: space-between;
+    
 }
 
-.back-button {
-    display: inline;
+.back-button {   
     margin-right: 10%;
     margin-left: 2%;
     text-decoration: none;
-    color: black
+    color: black;
+   
 }
 
 .back-button-icon{
-    display: inline;
+    
     margin-left: 2%;
     text-decoration: none;
-    color: black
+    color: black;
+    
 }
 
 .back-button:hover, .back-button-icon:hover{
@@ -23,13 +27,16 @@
 
 }
 .session-name {
-    display: inline;
+    
     font-weight: 600;
    
 }
 .progress-bar-container{
     display: flex;
-    justify-content: flex-end;
+    align-self: flex-end;
+    margin-left: 10%;
+    
+    
 }
 .start-time{
     display:inline ;
@@ -56,7 +63,7 @@
 }
 
 .progress-bar{
-    display: flex;
+  
     vertical-align: top;
     background: #756A9F;
     border-radius: 7.5px;
